upgrade to java 17 (#501)
* upgrade to java 17



---------

Co-authored-by: Himanshu Upadhyay <x_hupadhyay@flow.io>